fixed 3 dot color in pagination dark mode

--- a/src/sass/layout/_pagination.scss
+++ b/src/sass/layout/_pagination.scss
@@ -58,6 +58,7 @@
   line-height: 30px;
   text-align: center;
   vertical-align: middle;
+  color: var(--dark-txt-color);
 }
 
 .dotes {
